--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <script src="data/Britishinfluence_7.js"></script>
         <script src="data/Australianinfluence_8.js"></script>
         <script src="data/Americaninfluence_9.js"></script>
-        <script src="data/Landingpoints2018Raw_10.js"></script>
+        <script src="data/FiveEyesinfluence_10.js"></script>
+        <script src="data/Landingpoints2018Raw_11.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:23, minZoom:1
@@ -791,7 +792,84 @@
             style: style_Americaninfluence_9_0,
         });
         bounds_group.addLayer(layer_Americaninfluence_9);
-        function pop_Landingpoints2018Raw_10(feature, layer) {
+        function pop_FiveEyesinfluence_10(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Ready for service</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>National origins of supplier(s)</strong><br />' + (feature.properties['suppliers_countries'] !== null ? autolinker.link(feature.properties['suppliers_countries'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Australian influence</strong><br />' + (feature.properties['influence_australia'] !== null ? autolinker.link(feature.properties['influence_australia'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Canadian influence</th>\
+                        <td>' + (feature.properties['influence_canada'] !== null ? autolinker.link(feature.properties['influence_canada'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Chinese influence</th>\
+                        <td>' + (feature.properties['influence_china'] !== null ? autolinker.link(feature.properties['influence_china'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>New Zealand influence</strong><br />' + (feature.properties['influence_nz'] !== null ? autolinker.link(feature.properties['influence_nz'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Russian influence</strong><br />' + (feature.properties['influence_russia'] !== null ? autolinker.link(feature.properties['influence_russia'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Saudi Arabian influence</th>\
+                        <td>' + (feature.properties['influence_saudi_arabia'] !== null ? autolinker.link(feature.properties['influence_saudi_arabia'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">British influence</th>\
+                        <td>' + (feature.properties['influence_uk'] !== null ? autolinker.link(feature.properties['influence_uk'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">American influence</th>\
+                        <td>' + (feature.properties['influence_us'] !== null ? autolinker.link(feature.properties['influence_us'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <th scope="row">Five Eyes influence</th>\
+                        <td>' + (feature.properties['influence_5_eyes'] !== null ? autolinker.link(feature.properties['influence_5_eyes'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_FiveEyesinfluence_10_0() {
+            return {
+                pane: 'pane_FiveEyesinfluence_10',
+                opacity: 1,
+                color: 'rgba(151,0,226,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 1.0,
+                fillOpacity: 0,
+                interactive: true,
+            }
+        }
+        map.createPane('pane_FiveEyesinfluence_10');
+        map.getPane('pane_FiveEyesinfluence_10').style.zIndex = 410;
+        map.getPane('pane_FiveEyesinfluence_10').style['mix-blend-mode'] = 'normal';
+        var layer_FiveEyesinfluence_10 = new L.geoJson(json_FiveEyesinfluence_10, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_FiveEyesinfluence_10',
+            layerName: 'layer_FiveEyesinfluence_10',
+            pane: 'pane_FiveEyesinfluence_10',
+            onEachFeature: pop_FiveEyesinfluence_10,
+            style: style_FiveEyesinfluence_10_0,
+        });
+        bounds_group.addLayer(layer_FiveEyesinfluence_10);
+        function pop_Landingpoints2018Raw_11(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
@@ -800,9 +878,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Landingpoints2018Raw_10_0() {
+        function style_Landingpoints2018Raw_11_0() {
             return {
-                pane: 'pane_Landingpoints2018Raw_10',
+                pane: 'pane_Landingpoints2018Raw_11',
                 radius: 1.8,
                 opacity: 1,
                 color: 'rgba(35,35,35,1.0)',
@@ -816,28 +894,28 @@
                 interactive: true,
             }
         }
-        map.createPane('pane_Landingpoints2018Raw_10');
-        map.getPane('pane_Landingpoints2018Raw_10').style.zIndex = 410;
-        map.getPane('pane_Landingpoints2018Raw_10').style['mix-blend-mode'] = 'normal';
-        var layer_Landingpoints2018Raw_10 = new L.geoJson(json_Landingpoints2018Raw_10, {
+        map.createPane('pane_Landingpoints2018Raw_11');
+        map.getPane('pane_Landingpoints2018Raw_11').style.zIndex = 411;
+        map.getPane('pane_Landingpoints2018Raw_11').style['mix-blend-mode'] = 'normal';
+        var layer_Landingpoints2018Raw_11 = new L.geoJson(json_Landingpoints2018Raw_11, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Landingpoints2018Raw_10',
-            layerName: 'layer_Landingpoints2018Raw_10',
-            pane: 'pane_Landingpoints2018Raw_10',
-            onEachFeature: pop_Landingpoints2018Raw_10,
+            dataVar: 'json_Landingpoints2018Raw_11',
+            layerName: 'layer_Landingpoints2018Raw_11',
+            pane: 'pane_Landingpoints2018Raw_11',
+            onEachFeature: pop_Landingpoints2018Raw_11,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Landingpoints2018Raw_10_0(feature));
+                return L.circleMarker(latlng, style_Landingpoints2018Raw_11_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Landingpoints2018Raw_10);
-        map.addLayer(layer_Landingpoints2018Raw_10);
+        bounds_group.addLayer(layer_Landingpoints2018Raw_11);
+        map.addLayer(layer_Landingpoints2018Raw_11);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/Landingpoints2018Raw_10.png" /> Landing points (2018 Raw)': layer_Landingpoints2018Raw_10,'<img src="legend/Americaninfluence_9.png" /> American influence': layer_Americaninfluence_9,'<img src="legend/Australianinfluence_8.png" /> Australian influence': layer_Australianinfluence_8,'<img src="legend/Britishinfluence_7.png" /> British influence': layer_Britishinfluence_7,'<img src="legend/Canadianinfluence_6.png" /> Canadian influence': layer_Canadianinfluence_6,'<img src="legend/Chineseinfluence_5.png" /> Chinese influence': layer_Chineseinfluence_5,'<img src="legend/NewZealandinfluence_4.png" /> New Zealand influence': layer_NewZealandinfluence_4,'<img src="legend/Russianinfluence_3.png" /> Russian influence': layer_Russianinfluence_3,'<img src="legend/SaudiArabianinfluence_2.png" /> Saudi Arabian influence': layer_SaudiArabianinfluence_2,'<img src="legend/Allcables_1.png" /> All cables': layer_Allcables_1,'<img src="legend/Countries_0.png" /> Countries': layer_Countries_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/Landingpoints2018Raw_11.png" /> Landing points (2018 Raw)': layer_Landingpoints2018Raw_11,'<img src="legend/FiveEyesinfluence_10.png" /> Five Eyes influence': layer_FiveEyesinfluence_10,'<img src="legend/Americaninfluence_9.png" /> American influence': layer_Americaninfluence_9,'<img src="legend/Australianinfluence_8.png" /> Australian influence': layer_Australianinfluence_8,'<img src="legend/Britishinfluence_7.png" /> British influence': layer_Britishinfluence_7,'<img src="legend/Canadianinfluence_6.png" /> Canadian influence': layer_Canadianinfluence_6,'<img src="legend/Chineseinfluence_5.png" /> Chinese influence': layer_Chineseinfluence_5,'<img src="legend/NewZealandinfluence_4.png" /> New Zealand influence': layer_NewZealandinfluence_4,'<img src="legend/Russianinfluence_3.png" /> Russian influence': layer_Russianinfluence_3,'<img src="legend/SaudiArabianinfluence_2.png" /> Saudi Arabian influence': layer_SaudiArabianinfluence_2,'<img src="legend/Allcables_1.png" /> All cables': layer_Allcables_1,'<img src="legend/Countries_0.png" /> Countries': layer_Countries_0,},{collapsed:false}).addTo(map);
         map.on("zoomend", function(){
 
                 if (map.hasLayer(layer_Countries_0)) {
@@ -1558,15 +1636,15 @@
                 filterFunc();
             };
             div_cable_name.appendChild(reset_cable_name);
-        resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_10]);
+        resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_11]);
         map.on("zoomend", function(){
-            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_10]);
+            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_11]);
         });
         map.on("layeradd", function(){
-            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_10]);
+            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_11]);
         });
         map.on("layerremove", function(){
-            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_10]);
+            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_11]);
         });
         </script>
     </body>
