--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -181,6 +184,9 @@
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
@@ -260,6 +266,9 @@
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -335,6 +344,9 @@
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
@@ -414,6 +426,9 @@
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -489,6 +504,9 @@
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
@@ -568,6 +586,9 @@
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -643,6 +664,9 @@
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
@@ -722,6 +746,9 @@
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -799,7 +826,7 @@
                         <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Ready for service</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
@@ -873,10 +900,10 @@
         function pop_FiveEyesChineseinfluence_11(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['fid'] !== null ? autolinker.link(feature.properties['fid'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Cable name</strong><br />' + (feature.properties['cable_name'] !== null ? autolinker.link(feature.properties['cable_name'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Ready for use</strong><br />' + (feature.properties['ReadyForSe'] !== null ? autolinker.link(feature.properties['ReadyForSe'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2"><strong>Supplier(s)</strong><br />' + (feature.properties['suppliers'] !== null ? autolinker.link(feature.properties['suppliers'].toLocaleString()) : '') + '</td>\
