--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <script src="data/Americaninfluence_9.js"></script>
         <script src="data/FiveEyesinfluence_10.js"></script>
         <script src="data/FiveEyesChineseinfluence_11.js"></script>
-        <script src="data/Landingpoints2018Raw_12.js"></script>
+        <script src="data/Landingpoints_12.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:23, minZoom:1
@@ -835,7 +835,8 @@
                         <td colspan="2"><strong>National origins of supplier(s)</strong><br />' + (feature.properties['suppliers_countries'] !== null ? autolinker.link(feature.properties['suppliers_countries'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Australian influence</strong><br />' + (feature.properties['influence_australia'] !== null ? autolinker.link(feature.properties['influence_australia'].toLocaleString()) : '') + '</td>\
+                        <th scope="row">Australian influence</th>\
+                        <td>' + (feature.properties['influence_australia'] !== null ? autolinker.link(feature.properties['influence_australia'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <th scope="row">Canadian influence</th>\
@@ -846,10 +847,12 @@
                         <td>' + (feature.properties['influence_china'] !== null ? autolinker.link(feature.properties['influence_china'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>New Zealand influence</strong><br />' + (feature.properties['influence_nz'] !== null ? autolinker.link(feature.properties['influence_nz'].toLocaleString()) : '') + '</td>\
+                        <th scope="row">New Zealand influence</th>\
+                        <td>' + (feature.properties['influence_nz'] !== null ? autolinker.link(feature.properties['influence_nz'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Russian influence</strong><br />' + (feature.properties['influence_russia'] !== null ? autolinker.link(feature.properties['influence_russia'].toLocaleString()) : '') + '</td>\
+                        <th scope="row">Russian influence</th>\
+                        <td>' + (feature.properties['influence_russia'] !== null ? autolinker.link(feature.properties['influence_russia'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <th scope="row">Saudi Arabian influence</th>\
@@ -875,7 +878,7 @@
             return {
                 pane: 'pane_FiveEyesinfluence_10',
                 opacity: 1,
-                color: 'rgba(151,0,226,1.0)',
+                color: 'rgba(165,108,227,1.0)',
                 dashArray: '',
                 lineCap: 'square',
                 lineJoin: 'bevel',
@@ -977,7 +980,7 @@
             style: style_FiveEyesChineseinfluence_11_0,
         });
         bounds_group.addLayer(layer_FiveEyesChineseinfluence_11);
-        function pop_Landingpoints2018Raw_12(feature, layer) {
+        function pop_Landingpoints_12(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
@@ -986,9 +989,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Landingpoints2018Raw_12_0() {
+        function style_Landingpoints_12_0() {
             return {
-                pane: 'pane_Landingpoints2018Raw_12',
+                pane: 'pane_Landingpoints_12',
                 radius: 1.8,
                 opacity: 1,
                 color: 'rgba(35,35,35,1.0)',
@@ -1002,28 +1005,28 @@
                 interactive: true,
             }
         }
-        map.createPane('pane_Landingpoints2018Raw_12');
-        map.getPane('pane_Landingpoints2018Raw_12').style.zIndex = 412;
-        map.getPane('pane_Landingpoints2018Raw_12').style['mix-blend-mode'] = 'normal';
-        var layer_Landingpoints2018Raw_12 = new L.geoJson(json_Landingpoints2018Raw_12, {
+        map.createPane('pane_Landingpoints_12');
+        map.getPane('pane_Landingpoints_12').style.zIndex = 412;
+        map.getPane('pane_Landingpoints_12').style['mix-blend-mode'] = 'normal';
+        var layer_Landingpoints_12 = new L.geoJson(json_Landingpoints_12, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Landingpoints2018Raw_12',
-            layerName: 'layer_Landingpoints2018Raw_12',
-            pane: 'pane_Landingpoints2018Raw_12',
-            onEachFeature: pop_Landingpoints2018Raw_12,
+            dataVar: 'json_Landingpoints_12',
+            layerName: 'layer_Landingpoints_12',
+            pane: 'pane_Landingpoints_12',
+            onEachFeature: pop_Landingpoints_12,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Landingpoints2018Raw_12_0(feature));
+                return L.circleMarker(latlng, style_Landingpoints_12_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Landingpoints2018Raw_12);
-        map.addLayer(layer_Landingpoints2018Raw_12);
+        bounds_group.addLayer(layer_Landingpoints_12);
+        map.addLayer(layer_Landingpoints_12);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/Landingpoints2018Raw_12.png" /> Landing points (2018 Raw)': layer_Landingpoints2018Raw_12,'<img src="legend/FiveEyesChineseinfluence_11.png" /> Five Eyes & Chinese influence': layer_FiveEyesChineseinfluence_11,'<img src="legend/FiveEyesinfluence_10.png" /> Five Eyes influence': layer_FiveEyesinfluence_10,'<img src="legend/Americaninfluence_9.png" /> American influence': layer_Americaninfluence_9,'<img src="legend/Australianinfluence_8.png" /> Australian influence': layer_Australianinfluence_8,'<img src="legend/Britishinfluence_7.png" /> British influence': layer_Britishinfluence_7,'<img src="legend/Canadianinfluence_6.png" /> Canadian influence': layer_Canadianinfluence_6,'<img src="legend/Chineseinfluence_5.png" /> Chinese influence': layer_Chineseinfluence_5,'<img src="legend/NewZealandinfluence_4.png" /> New Zealand influence': layer_NewZealandinfluence_4,'<img src="legend/Russianinfluence_3.png" /> Russian influence': layer_Russianinfluence_3,'<img src="legend/SaudiArabianinfluence_2.png" /> Saudi Arabian influence': layer_SaudiArabianinfluence_2,'<img src="legend/Allcables_1.png" /> All cables': layer_Allcables_1,'<img src="legend/Countries_0.png" /> Countries': layer_Countries_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/Landingpoints_12.png" /> Landing points': layer_Landingpoints_12,'<img src="legend/FiveEyesChineseinfluence_11.png" /> Five Eyes & Chinese influence': layer_FiveEyesChineseinfluence_11,'<img src="legend/FiveEyesinfluence_10.png" /> Five Eyes influence': layer_FiveEyesinfluence_10,'<img src="legend/Americaninfluence_9.png" /> American influence': layer_Americaninfluence_9,'<img src="legend/Australianinfluence_8.png" /> Australian influence': layer_Australianinfluence_8,'<img src="legend/Britishinfluence_7.png" /> British influence': layer_Britishinfluence_7,'<img src="legend/Canadianinfluence_6.png" /> Canadian influence': layer_Canadianinfluence_6,'<img src="legend/Chineseinfluence_5.png" /> Chinese influence': layer_Chineseinfluence_5,'<img src="legend/NewZealandinfluence_4.png" /> New Zealand influence': layer_NewZealandinfluence_4,'<img src="legend/Russianinfluence_3.png" /> Russian influence': layer_Russianinfluence_3,'<img src="legend/SaudiArabianinfluence_2.png" /> Saudi Arabian influence': layer_SaudiArabianinfluence_2,'<img src="legend/Allcables_1.png" /> All cables': layer_Allcables_1,'<img src="legend/Countries_0.png" /> Countries': layer_Countries_0,},{collapsed:false}).addTo(map);
         map.on("zoomend", function(){
 
                 if (map.hasLayer(layer_Countries_0)) {
@@ -1744,15 +1747,15 @@
                 filterFunc();
             };
             div_cable_name.appendChild(reset_cable_name);
-        resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_12]);
+        resetLabels([layer_Countries_0,layer_Landingpoints_12]);
         map.on("zoomend", function(){
-            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_12]);
+            resetLabels([layer_Countries_0,layer_Landingpoints_12]);
         });
         map.on("layeradd", function(){
-            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_12]);
+            resetLabels([layer_Countries_0,layer_Landingpoints_12]);
         });
         map.on("layerremove", function(){
-            resetLabels([layer_Countries_0,layer_Landingpoints2018Raw_12]);
+            resetLabels([layer_Countries_0,layer_Landingpoints_12]);
         });
         </script>
     </body>
